# Data-Lens

./: .gitignore  README.md
data/: dummy_marksheet.csv
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte
frontend/src/components/: Chart.svelte  ChartMessage.svelte  ChatInterface.svelte  CssTest.svelte
frontend/src/data/: product-categories.json  quarterly-revenue.json  sales-data.json
server/: .env  AirlineSatisfactionSurvey1.parquet  docker-compose.dev.yaml  pyproject.toml  requirements.txt  server.py
server/static/css/: style.css
server/templates/: index.html
server/utils/: __init__.py  enrich.py  summarizer.py
